Category dropdown not visible issue fix

--- a/includes/partials/_header.scss
+++ b/includes/partials/_header.scss
@@ -160,11 +160,12 @@
             background-color: rgba(255,255,255,0.03);
             border-bottom: 1px solid #1f2024;
             transition: .17s ease;
-            &:hover ul{
-                display: block;
-                visibility: visible;
-            } 
+            
         }   
+        ul li:hover ul{
+            display: block;
+            visibility: visible;
+        } 
         ul li ul li a{
             display: block;
             height: 36px;
