--- a/includes/style.css
+++ b/includes/style.css
@@ -195,7 +195,7 @@
   transition: .17s ease;
 }
 
-.homepage-header-wrapper header ul li ul li:hover ul {
+.homepage-header-wrapper header ul li:hover ul {
   display: block;
   visibility: visible;
 }
@@ -2701,7 +2701,7 @@
   transition: .17s ease;
 }
 
-.homepage-header-wrapper header ul li ul li:hover ul {
+.homepage-header-wrapper header ul li:hover ul {
   display: block;
   visibility: visible;
 }
